@@ -54,7 +54,10 @@
 #define GICR_WAKER_OFFSET       0x14
 #define GICR_ICACTIVER0_OFFSET  0x380
 #define GICR_ICFGR0_OFFSET      0xC00
+#define GICD_IROUTER60_OFFSET   0x61e0
 #define GICD_IROUTER76_OFFSET   0x6260
+#define GICD_IROUTER112_OFFSET  0x6380
+#define GICD_IROUTER113_OFFSET  0x6388
 
  // gic bitfields
 #define GICD_CTLR_EN_GRP_MASK  0x7
@@ -71,7 +74,7 @@
 #define GICR_IPRIORITYR3_SGI15_MASK  0xFF000000
 #define GICR_ICPENDR0_SGI15    0x8000
 
-#define GICD_IROUTER76_VALUE   0x100
+#define GICD_IROUTER_VALUE     0x100
 #define GICR_WAKER_SLEEP_BIT   0x2
 #define GICR_WAKER_ASLEEP      (1 << 2 | 1 << 1)
 
